Fix text cropping in hero section

--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -44,7 +44,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
 }
 
@@ -133,11 +133,12 @@
 .hero-text-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100%;
   width: 65%;
   padding-left: 4%;
   padding-right: 8%;
+  padding-top: 2vh;
 }
 
 /* Content Wrapper (Fades out when chat is active) */
